# isvicre-cakisi

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
app/: main.py
app/core/: cache.py  config.py  health.py  image_utils.py  metrics.py  observability.py  pipeline.py  rate_limit.py  redis_client.py  upload.py  utils.py
app/static/: manifest.json  sw.js
app/templates/: base.html  index.html
app/templates/admin/: stats.html
app/templates/components/: alert.html  button.html  card.html  hero.html  pipeline_suggestions.html  tool_card.html  tool_content.html  tool_input.html  tool_layout.html  tool_settings.html  upload_box.html
app/tools/: registry.py
app/tools/base64_tool/: router.py
app/tools/base_converter/: __init__.py  router.py
app/tools/color_picker/: __init__.py  router.py
app/tools/dice_roller/: __init__.py  router.py
app/tools/hash_generator/: __init__.py  router.py
app/tools/image_converter/: router.py  utils.py
app/tools/image_cropper/: __init__.py  router.py
app/tools/image_metadata/: __init__.py  router.py
app/tools/image_resizer/: router.py
tests/: conftest.py  test_analytics.py  test_cache.py  test_dev_tools.py  test_flow_analytics.py  test_health_metrics.py  test_html_rendering.py  test_main.py  test_markdown_preview.py  test_password_generator.py  test_pipeline.py  test_qr_code.py  test_rate_limit.py  test_redis.py  test_seo.py  test_tools.py
(+42 files in other folders)
